fix gap

--- a/assets/scss/pages/_cleaning.scss
+++ b/assets/scss/pages/_cleaning.scss
@@ -182,7 +182,6 @@
   &__slider {
     flex: 0 0 50%;
     display: flex;
-    gap: $gap * 3.5;
     &-vertical {
       margin-top: $gap + 5;
       // background-color: color(eden-neutral-6);
@@ -250,6 +249,7 @@
       display: none;
     }
     &-text {
+      margin-left: $gap * 3.5;
       color: color(eden-neutral-1);
       h5 {
         line-height: 31px;
@@ -425,6 +425,7 @@
         display: none;
       }
       &-text {
+        margin-left: 0;
         margin-top: $gap * 3.5;
         overflow: auto;
         display: flex;
